Fix for context menus not working in new windows opened from links with a _new target. b=76327, r=valeski@netscape.com, sr=rpotts@netscape.com